// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography Should render body1 1`] = `
<p
  className="font-inter text-dgrey-800 body1"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render body2 1`] = `
<p
  className="font-inter text-dgrey-800 body2"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render caption 1`] = `
<p
  className="font-inter text-dgrey-800 caption"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render disclaimer 1`] = `
<p
  className="font-inter text-dgrey-800 disclaimer"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render div with h1 styles 1`] = `
<div
  className="font-inter text-dgrey-800 h1"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  Lorem ipsum dolor sit amet.
</div>
`;

exports[`Typography Should render h1 1`] = `
<h1
  className="font-inter text-dgrey-800 h1"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  Lorem ipsum dolor sit amet.
</h1>
`;

exports[`Typography Should render h1 with className bg-red-200 1`] = `
<h1
  className="font-inter text-dgrey-800 h1 bg-red-200"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  Lorem ipsum dolor sit amet.
</h1>
`;

exports[`Typography Should render h1 with right alignment 1`] = `
<h1
  className="font-inter text-dgrey-800 h1"
  style={
    Object {
      "textAlign": "right",
    }
  }
>
  Lorem ipsum dolor sit amet.
</h1>
`;

exports[`Typography Should render h2 1`] = `
<h2
  className="font-inter text-dgrey-800 h2"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  Lorem ipsum dolor sit amet.
</h2>
`;

exports[`Typography Should render h3 1`] = `
<h3
  className="font-inter text-dgrey-800 h3"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  Lorem ipsum dolor sit amet.
</h3>
`;

exports[`Typography Should render h4 1`] = `
<h4
  className="font-inter text-dgrey-800 h4"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  Lorem ipsum dolor sit amet.
</h4>
`;

exports[`Typography Should render h5 1`] = `
<h5
  className="font-inter text-dgrey-800 h5"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  Lorem ipsum dolor sit amet.
</h5>
`;

exports[`Typography Should render h6 1`] = `
<h6
  className="font-inter text-dgrey-800 h6"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  Lorem ipsum dolor sit amet.
</h6>
`;

exports[`Typography Should render hero 1`] = `
<h1
  className="font-inter text-dgrey-800 hero"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  Lorem ipsum dolor sit amet.
</h1>
`;

exports[`Typography Should render subtitle 1`] = `
<h6
  className="font-inter text-dgrey-800 subtitle"
  style={
    Object {
      "textAlign": "left",
    }
  }
>
  Lorem ipsum dolor sit amet.
</h6>
`;
